--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,11 @@
 cmake_minimum_required(VERSION 3.10)
 project(CO-Lab-Framework C ASM)
 
+set(CMAKE_BUILD_TYPE Debug)
 set(CMAKE_C_COMPILER clang)
 set(CMAKE_C_STANDARD 11)
-set(CMAKE_C_FLAGS "-gdwarf-4 -fPIE -Wall -O0 -fsanitize=address -fno-omit-frame-pointer")
-set(CMAKE_EXE_LINKER_FLAGS "-fsanitize=address -fno-omit-frame-pointer")
+set(CMAKE_C_FLAGS "-g -gdwarf-4 -fPIE -Wall -O0 -fsanitize=address -fno-omit-frame-pointer")
+set(CMAKE_EXE_LINKER_FLAGS "-g -fsanitize=address -fno-omit-frame-pointer")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../)
 # Your programs will run as standalone executables
 add_compile_definitions(STANDALONE)
